--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddBookActivity" />
+        <activity android:name=".BookDetailsActivity" />
+
     </application>
 
 </manifest>
