--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,16 @@
         android:theme="@style/Theme.Readersdiary"
         tools:targetApi="31">
         <activity
-
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Readersdiary">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".AddBookActivity" />
         <activity android:name=".BookDetailsActivity" />
-
+        <activity android:name=".StatisticsActivity" />
     </application>
-
 </manifest>
